chatbox, facbook comment

--- a/templates/base.html
+++ b/templates/base.html
@@ -107,6 +107,8 @@
 
 
             <li><a href="/contactus" class="nav-link px-2 text-white">Contact Us</a></li>
+            <li><a href="/chat" class="nav-link px-2 text-white">Chat</a></li>
+            
 
           </ul>
 
