--- a/templates/home/contact_us.html
+++ b/templates/home/contact_us.html
@@ -12,7 +12,7 @@
   }
 
   .col-md-3 {
-    background: rgb(243, 73, 73);
+    background: rgb(8, 0, 83);
     padding: 4%;
     border-top-left-radius: 0.5rem;
     border-bottom-left-radius: 0.5rem;
@@ -97,6 +97,10 @@
       top: 0px;
     }
   }
+  .ct{
+    color: white;
+  }
+ 
 </style>
 
 {% endblock css %}
@@ -110,8 +114,8 @@
     <div class="col-md-3">
       <div class="contact-info">
         <img src="https://image.ibb.co/kUASdV/contact-image.png" alt="image" />
-        <h2>Contact Us</h2>
-        <h4>We would love to hear from you !</h4>
+        <h2 class="ct">Contact Us</h2>
+        <h4 class="ct">We would love to hear from you !</h4>
       </div>
     </div>
     <div class="col-md-9">
@@ -145,7 +149,7 @@
           </div>
           <div class="form-group">
             <div class="col-sm-offset-2 col-sm-10">
-              <button type="submit" class="btn btn-secondary my-2">Submit</button>
+              <button type="submit" class="btn v my-2">Submit</button>
             </div>
           </div>
         </div>
