--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,7 @@
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <title>{% block title %} {% endblock title %}</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Baloo+Bhai+2&display=swap" rel="stylesheet">
   <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
@@ -23,6 +24,7 @@
       padding: 0;
       margin: 0;
       z-index: 1;
+      /* overflow-y: scroll; */
    
     }
 
@@ -46,7 +48,7 @@
 
 
 
-        background-image: linear-gradient(rgb(255, 183, 183), rgb(139, 249, 255));
+        background-image: linear-gradient(rgb(255, 255, 134), rgb(4, 4, 83));
       }
     }
     @media only screen and (min-width: 992px) {
@@ -54,26 +56,20 @@
        display: none;
      }
     }
+    /* #navbar2{
+      width: 9vw;
+    } */
 
 
  
 
-    .bg {
-      height: 140vh;
-      position: absolute;
-
-      width: 99vw;
-      z-index: -100;
-       background-image: linear-gradient(rgb(255, 183, 183), rgb(139, 249, 255)); 
-      opacity: 0.3;
-    }
 
     a {
       text-decoration: none;
       color: white;
       font: weight 9px;
     }
-  
+ 
 
   </style>
 
@@ -107,7 +103,6 @@
 
 
             <li><a href="/contactus" class="nav-link px-2 text-white">Contact Us</a></li>
-            <li><a href="/chat" class="nav-link px-2 text-white">Chat</a></li>
             
 
           </ul>
@@ -135,6 +130,10 @@
         </div>
       </div>
     </header>
+  <div class="bg">
+
+
+  </div>
   </div>
 
 
