--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -5,12 +5,12 @@
 {% block css %}
 <style>
     body {
-        background-color: rgb(253, 238, 238);
-        width: 100vw;
+        {% comment %} background-color: rgb(253, 238, 238); {% endcomment %}
+        width: 99vw;
     }
 
     .Heading {
-        color: rgb(255, 0, 0);
+        color: rgb(1, 17, 110);
         text-align: center;
         padding: 9vh;
         font-size: 7vw;
@@ -21,15 +21,17 @@
     .content {
 
         font-family: 'Bree Serif', serif;
-        margin: 3px 230px;
-        /* position: absolute; */
+     
         display: block;
         flex-direction: column;
         align-items: center;
         justify-content: center;
         border: 3px solid green;
-        background-color: rgb(224, 223, 223);
+        /* background-color: rgb(224, 223, 223); */
         color: rgb(14, 10, 231);
+    }
+    .card-text{
+        /* color: rgb(224, 93, 93); */
     }
 
     h3 {
@@ -42,13 +44,15 @@
     }
 
     .card-header {
-        background-color: rgb(250, 81, 81);
+        background-color: rgb(8, 0, 83);
         font-size: larger;
+        color: white;
+
     }
 
     .card-body {
-        background-color: rgb(248, 200, 200);
-        color: red;
+        background-color: transparent;
+        color: rgb(18, 12, 95);
     }
 
     .card {
@@ -58,7 +62,7 @@
     }
 
     #u {
-        background: linear-gradient(45deg, #ff9c9c, rgb(166, 245, 255), #ffa3a3, rgb(40, 230, 255));
+        /* background: linear-gradient(45deg, #ff9c9c, rgb(166, 245, 255), #ffa3a3, rgb(40, 230, 255)); */
         animation: bbt 2s ease infinite;
         background-size: 200% 200%;
         /* border-radius: 8em; */
@@ -70,7 +74,7 @@
         width: 70vw;
         background-color: rgba(40, 74, 75, 0.363);
         position: relative;
-        top: 50vh;
+        top: 60vh;
         margin: auto;
     }
     .msgs{
@@ -78,13 +82,24 @@
         width: 100%;
         background-color: rgb(230, 255, 204);
     }
+       img{
+      width: 99vw;
+      height: 100vh;
+      position: absolute;
+      z-index: -99999;
+      opacity: 0.3;
+    }
 
  
-
+{% block h %}height:200vh;{% endblock h %}height:200vh;
 </style>
 {% endblock css %}
 
+
+
 {% block body %}
+   {% load static %}
+     <img src="{% static "imgs/hh.jpg" %}" alt="home" />
 <div class="Heading">Welcome To Our Website</div>
 
 <div class="card text-center">
@@ -101,7 +116,7 @@
         </p>
         <a href="#" class="btn btn-primary">Get Started</a>
     </div>
-</div>
+</div> 
 
 
 
