--- a/templates/home/profile.html
+++ b/templates/home/profile.html
@@ -7,7 +7,7 @@
   text-align: left;
 }
 span{
-  color: rgb(255, 0, 0);
+  color: rgb(75, 61, 201);
 
   font-weight: 400;
 }
@@ -26,6 +26,9 @@ img{
   justify-content: center;
   align-items: center;
 }
+/* .container{
+  color: white;
+} */
 </style>
 {% endblock css %}
 
