--- a/templates/base.html
+++ b/templates/base.html
@@ -69,6 +69,13 @@
       color: white;
       font: weight 9px;
     }
+    /* .bg{
+      width: 100vw;
+      height: 100vh;
+      background-image: linear-gradient(blue,yellow);
+      z-index: -666;
+      position: absolute;
+    } */
  
 
   </style>
