--- a/templates/base.html
+++ b/templates/base.html
@@ -69,14 +69,123 @@
       color: white;
       font: weight 9px;
     }
-    /* .bg{
-      width: 100vw;
-      height: 100vh;
-      background-image: linear-gradient(blue,yellow);
-      z-index: -666;
-      position: absolute;
-    } */
+   
  
+
+ .nn{
+   max-height: 12vh;
+ }
+ .tran{
+   transition: max-height 2s;
+   font-size: 1.1em;
+ }
+ .oh{
+   background-image: linear-gradient(45deg, red, blue);
+   background-size: 130%;
+   padding: 5px 18px;
+   border-radius: 9px;
+   text-decoration: none;
+   background-position: 0%;
+
+ }
+ .oh :hover{
+   background-position: 100%;
+
+ }
+ /*  buttons */
+ * {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    /* font-size: 1.4em; */
+}
+
+.buttons {
+    margin: 10%;
+    text-align: center;
+    font-family: 'Kalam', cursive;
+  }
+  
+  .btn-hover {
+    min-width: 120px;
+    font-size: 1.4em;
+    font-size: 16px;
+    font-weight: 600;
+    color: #fff;
+    cursor: pointer;
+    margin: 12px;
+    /* height: 55px; */
+    padding: 12px 23px;
+    text-align:center;
+    border: none;
+    background-size: 300% 100%;
+
+    border-radius: 50px;
+    -o-transition: all .4s ease-in-out;
+    -webkit-transition: all .4s ease-in-out;
+    transition: all .4s ease-in-out;
+}
+
+.btn-hover:hover {
+    background-position: 100% 0;
+    -o-transition: all .4s ease-in-out;
+    -webkit-transition: all .4s ease-in-out;
+    transition: all .4s ease-in-out;
+}
+
+.btn-hover:focus {
+    outline: none;
+}
+
+.btn-hover.color-1 {
+    background-image: linear-gradient(to right, #25aae1, #40e495, #30dd8a, #2bb673);
+    box-shadow: 0 4px 15px 0 rgba(49, 196, 190, 0.75);
+}
+.btn-hover.color-2 {
+    background-image: linear-gradient(to right, #f5ce62, #e43603, #fa7199, #e85a19);
+    box-shadow: 0 4px 15px 0 rgba(229, 66, 10, 0.75);
+}
+.btn-hover.color-3 {
+    background-image: linear-gradient(to right, #667eea, #764ba2, #6B8DD6, #8E37D7);
+    box-shadow: 0 4px 15px 0 rgba(116, 79, 168, 0.75);
+
+}
+.btn-hover.color-4 {
+    background-image: linear-gradient(to right, #fc6076, #ff9a44, #ef9d43, #e75516);
+    box-shadow: 0 4px 15px 0 rgba(252, 104, 110, 0.75);
+}
+.btn-hover.color-5 {
+    background-image: linear-gradient(to right, #0ba360, #3cba92, #30dd8a, #2bb673);
+    box-shadow: 0 4px 15px 0 rgba(23, 168, 108, 0.75);
+}
+.btn-hover.color-6 {
+    background-image: linear-gradient(to right, #009245, #FCEE21, #00A8C5, #D9E021);
+    box-shadow: 0 4px 15px 0 rgba(83, 176, 57, 0.75);
+}
+.btn-hover.color-7 {
+    background-image: linear-gradient(to right, #6253e1, #852D91, #A3A1FF, #F24645);
+    box-shadow: 0 4px 15px 0 rgba(126, 52, 161, 0.75);
+}
+.btn-hover.color-8 {
+    background-image: linear-gradient(to right, #29323c, #485563, #2b5876, #4e4376);
+    box-shadow: 0 4px 15px 0 rgba(45, 54, 65, 0.75);
+}
+.btn-hover.color-9 {
+    background-image: linear-gradient(to right, #25aae1, #4481eb, #04befe, #3f86ed);
+    box-shadow: 0 4px 15px 0 rgba(65, 132, 234, 0.75);
+}
+.btn-hover.color-10 {
+        background-image: linear-gradient(to right, #ed6ea0, #ec8c69, #f7186a , #FBB03B);
+    box-shadow: 0 4px 15px 0 rgba(236, 116, 149, 0.75);
+}
+.btn-hover.color-11 {
+       background-image: linear-gradient(to right, #eb3941, #f15e64, #e14e53, #e2373f);  box-shadow: 0 5px 15px rgba(242, 97, 103, .4);
+}
+/* buttons */
+
+
+
+
 
   </style>
 
@@ -88,7 +197,7 @@
 
 <body>
   <div id="j">
-    <header  class="p-3 bg-dark text-white">
+    <header id="i" class="p-3 bg-dark nn tran text-white">
       <a id="x">X</a>
       <div id="navbar" class="container">
         <div id="navbar2" class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
@@ -119,8 +228,9 @@
             <input type="search" class="form-control form-control-dark" placeholder="Search..." aria-label="Search">
           </form> {% endcomment %}
           {% if request.user.is_authenticated %}
+          <a href="/profile">
+      <button class="btn-hover color-3">{{request.user}}</button></a>
 
-          <a href="/profile" class="btn btn-info">{{request.user}}</a>
           <!-- <script type="text/javascript"> 
             var a = "{{request.user}}";
             console.log(a);
@@ -138,6 +248,19 @@
       </div>
     </header>
   <div class="bg">
+      <!-- <button class="btn-hover color-1">BUTTON</button>
+      <button class="btn-hover color-2">BUTTON</button>
+      <button class="btn-hover color-3">BUTTON</button>
+      <button class="btn-hover color-4">BUTTON</button>
+      <button class="btn-hover color-5">BUTTON</button>
+      <button class="btn-hover color-6">BUTTON</button>
+      <button class="btn-hover color-7">BUTTON</button>
+      <button class="btn-hover color-8">BUTTON</button>
+      <button class="btn-hover color-9">BUTTON</button>
+      <button class="btn-hover color-10">BUTTON</button>
+      <button class="btn-hover color-11">BUTTON</button> -->
+  </div>
+  
 
 
   </div>
@@ -168,19 +291,28 @@
 
   <script>
 
-    
-    document.getElementById("x").addEventListener('click', () => {
-      let h = document.getElementById("j").clientHeight
-      // console.log("click",h);
-      
-        if(h<100){
-      document.getElementById("j").style.height = "auto";}
-        else{
-      document.getElementById("j").style.height = "15vh";
-      document.getElementById("j").style.transform= rotate(20);
+    var tap = 0;
 
+    document.getElementById("x").addEventListener('click', () => {
+      
+     
+      if(tap % 2 !== 0 ){
+      document.getElementById("i").classList.remove("nn")
+      document.getElementById("i").style.maxHeight = "54vh";
+
+        tap = tap + 1;    
+    }
+          else if(tap % 2 ===0){
+      document.getElementById("i").style.maxHeight = "9vh";
+
+
+          tap = tap +1;
 
         }
+
+
+
+      
 
 
     })
