--- a/templates/base.html
+++ b/templates/base.html
@@ -266,8 +266,8 @@
         </div>
       </div>
     </header>
-  <div class="bg">
-      <!-- <button class="btn-hover color-1">BUTTON</button>
+  <!-- <div class="bg">
+      <button class="btn-hover color-1">BUTTON</button>
       <button class="btn-hover color-2">BUTTON</button>
       <button class="btn-hover color-3">BUTTON</button>
       <button class="btn-hover color-4">BUTTON</button>
@@ -277,8 +277,8 @@
       <button class="btn-hover color-8">BUTTON</button>
       <button class="btn-hover color-9">BUTTON</button>
       <button class="btn-hover color-10">BUTTON</button>
-      <button class="btn-hover color-11">BUTTON</button> -->
-  </div>
+      <button class="btn-hover color-11">BUTTON</button>
+  </div> -->
   
 
 
