--- a/templates/blog/blogPost.html
+++ b/templates/blog/blogPost.html
@@ -13,7 +13,7 @@
 
 
 
-     
+    
 
  
 </style>
@@ -42,7 +42,7 @@
 
 {% elif userp.group == "H_Emp" %}
     <a href="/blog/delB/{{post.sno}}" class="btn btn-danger">Delete</a>
-
+hehehe
 
 {% endif %}
 
