--- a/templates/home/Covid_Updates.html
+++ b/templates/home/Covid_Updates.html
@@ -38,7 +38,7 @@
               width: 65vw;
               height: 80vh;
               /* display: flex; */
-              /* background-color: rgb(214, 213, 243); */
+              background-color: rgb(156, 153, 233);
        }
 
        .right {
