--- a/templates/home/AddEmp.html
+++ b/templates/home/AddEmp.html
@@ -77,11 +77,11 @@
 
     <div class="card my-2">
       <div class="card-header">
-        {{uu.Name}}
+        {{uu.N}}
       </div>
       <div class="card-body">
-        <h5 class="card-title">{{uu.username}}</h5>
-        <a href="/delE/{{uu.username}}" class="btn btn-danger">Delete</a>
+        <h5 class="card-title">{{uu.U}}</h5>
+        <a href="/delE/{{uu.U}}" class="btn btn-danger">Delete</a>
       </div>
     </div>
     
