--- a/templates/home/Add_H_admin.html
+++ b/templates/home/Add_H_admin.html
@@ -86,11 +86,11 @@
     <div class="my-2">
     <div class="card my-6">
       <div class="card-header">
-        {{uu.Name}}
+        {{uu.N}}
       </div>
       <div class="card-body">
-        <h5 class="card-title">{{uu.username}}</h5>
-        <a href="/delH/{{uu.username}}" class="btn btn-danger">Delete</a>
+        <h5 class="card-title">{{uu.U}}</h5>
+        <a href="/delH/{{uu.U}}" class="btn btn-danger">Delete</a>
       </div>
     </div></div>
     
