--- a/templates/home/Add_patient.html
+++ b/templates/home/Add_patient.html
@@ -97,11 +97,11 @@
   {% for uu in u %}
   <div class="card my-2">
     <div class="card-header">
-      {{uu.Name}}
+      {{uu.N}}
     </div>
     <div class="card-body">
-      <h5 class="card-title">{{uu.username}}</h5>
-      <a href="/delCS/{{uu.username}}" class="btn btn-danger">Delete</a>
+      <h5 class="card-title">{{uu.U}}</h5>
+      <a href="/delCS/{{uu.U}}" class="btn btn-danger">Delete</a>
     </div>
   </div>
 
