--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -190,7 +190,7 @@ $('#msg_form').submit(function(event) {
 
 });
 var a = "{{request.user}}"
-    console.log(a);
+    {% comment %} console.log(a); {% endcomment %}
 
 
 var g="";
