--- a/templates/blog/Addblog.html
+++ b/templates/blog/Addblog.html
@@ -49,7 +49,7 @@
 {% block body %}
 <h1>Share Your Experience</h1>
 <div class="container">
-<form action="/blog/addblog" class="fad" method="POST" >{% csrf_token %}
+<form action="/blog/addblog" class="fad" method="POST" enctype='multipart/form-data'>{% csrf_token %}
 <div class="mb-3">
   <label for="exampleFormControlInput1" class="form-label">Title</label>
   <input type="text" class="form-control" name="Addblogt" id="exampleFormControlInput1" placeholder="Enter title">
@@ -58,6 +58,7 @@
   <label for="exampleFormControlTextarea1" class="form-label">Content</label>
   <textarea class="form-control" name="Addblogc" id="exampleFormControlTextarea1" rows="10" columns="20"></textarea>
 </div>
+<input type="file" name="imgupload" id="imgupload"  >
 <button type="submit" class="btn btn-info inlin fad">Submit</button>
 <a href="/blog/">
   <button type="button" class="btn btn-warning inlin fad">Back</button>
