--- a/templates/blog/blogPost.html
+++ b/templates/blog/blogPost.html
@@ -9,7 +9,43 @@
 
 {% block css %}
 <style>
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 800; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
 
+/* Modal Content */
+.modal-content {
+  background-color: #fefefe;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+}
+
+/* The Close Button */
+.close {
+  color: #aaaaaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
 
 
 
@@ -47,6 +83,40 @@
 hehehe
 
 {% endif %}
+ {% comment %} {% if user.is_authenticated %}
+    <a href="/blog/delB/{{post.sno}}" class="btn btn-warning">Report</a>
+        
+    {% endif %} {% endcomment %}
+ <h2>Modal Example</h2>
+
+<!-- Trigger/Open The Modal -->
+<button id="myBtn">Report</button>
+
+<!-- The Modal -->
+<div id="myModal" class="modal">
+
+  <!-- Modal content -->
+  <div class="modal-content">
+    <span class="close">&times;</span>
+  
+<form action="/blog/repblog/{{post.sno}}" method="POST">
+
+  {% csrf_token %} 
+ 
+   <div class="mb-3">
+    <label for="exampleInputEmail1" class="form-label">Reason</label>
+    <input type="text"  name="reason" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+  </div>
+
+
+ 
+  <button type="submit" class="btn btn-primary my-2">Submit</button>
+</form>
+
+  </div>
+
+</div>
+    
 
 
 </div>
@@ -59,4 +129,31 @@ hehehe
 
 
 
+    <script>
+    // Get the modal
+var modal = document.getElementById("myModal");
+
+// Get the button that opens the modal
+var btn = document.getElementById("myBtn");
+
+// Get the <span> element that closes the modal
+var span = document.getElementsByClassName("close")[0];
+
+// When the user clicks the button, open the modal 
+btn.onclick = function() {
+  modal.style.display = "block";
+}
+
+// When the user clicks on <span> (x), close the modal
+span.onclick = function() {
+  modal.style.display = "none";
+}
+
+// When the user clicks anywhere outside of the modal, close it
+window.onclick = function(event) {
+  if (event.target == modal) {
+    modal.style.display = "none";
+  }
+}
+</script>
  {% endblock %}
