--- a/templates/home/profile.html
+++ b/templates/home/profile.html
@@ -139,6 +139,8 @@ img{
 {% if p1.G == "e"  %}
   <a href="/addpat">
    <button type="button" class="btn btn-info">Add Patients</button>
+  <a href="/reportedblogs">
+   <button type="button" class="btn btn-primary">Reported Blogs</button>
   
   </a> <br>
   <a href="/commentshow">
