--- a/templates/blog/blogPost.html
+++ b/templates/blog/blogPost.html
@@ -46,6 +46,9 @@
   text-decoration: none;
   cursor: pointer;
 }
+img{
+  width: 300px;
+}
 
 
 
@@ -59,7 +62,7 @@
 <div class="container">
   <div class="card my-2 animatn">
  
-  <img src="media/{{post.blog_img}}" alt="">
+  <img class="blog_image" src="media/{{post.blog_img}}" alt="image">
     <div class="card-header">
       {{post.title}}
     </div>
@@ -80,7 +83,7 @@
 
 {% elif userp.G == "e" %}
     <a href="/blog/delB/{{post.sno}}" class="btn btn-danger">Delete</a>
-hehehe
+
 
 {% endif %}
  {% comment %} {% if user.is_authenticated %}
@@ -121,9 +124,9 @@ hehehe
 
 </div>
     </div>
-<div class="fb-like" data-href="http://127.0.0.1:8000/blog/{{post.sno}}" data-width="" data-layout="standard" data-action="like" data-size="large" data-share="true"></div>
+<div class="fb-like" data-href="https://covid-survivorsiitisoc.herokuapp.com/blog/{{post.sno}}" data-width="" data-layout="standard" data-action="like" data-size="large" data-share="true"></div>
     <div class="container">
-    <div class="fb-comments" data-href="http://127.0.0.1:8000/blog/{{post.sno}}" data-width="" data-numposts="3"></div>
+    <div class="fb-comments" data-href="https://covid-survivorsiitisoc.herokuapp.com/blog/{{post.sno}}" data-width="" data-numposts="3"></div>
     </div>
 
 
