--- a/templates/home/Covid_Updates.html
+++ b/templates/home/Covid_Updates.html
@@ -14,31 +14,32 @@
               margin: 0;
               padding: 0;
        }
-
+       
        #map {
               height: 85vh;
               width: 34vw;
-
-
+              
+              
        }
-
-
-
+       
+       
+       
        .mapboxgl-popup {
               max-width: 400px;
               font: 12px/20px 'Helvetica Neue', Arial, Helvetica, sans-serif;
        }
-
+       
        .flx {
               display: flex;
            
        }
+  
 
        .left {
               width: 65vw;
               height: 80vh;
               /* display: flex; */
-              background-color: rgb(156, 153, 233);
+              /* background-color: rgb(156, 153, 233); */
        }
 
        .right {
@@ -97,6 +98,7 @@ img{
            margin:auto;
            width: 100px;
     }
+
     
 </style>
 
@@ -116,6 +118,9 @@ type="text/css">
 
 
 <div class="flx">
+       <div id="o">
+       
+       </div>
        <div class="left">
               <div class="f">
 
