--- a/templates/base.html
+++ b/templates/base.html
@@ -247,26 +247,29 @@
             <input type="search" class="form-control form-control-dark" placeholder="Search..." aria-label="Search">
           </form> {% endcomment %}
           {% if request.user.is_authenticated %}
+          
           <a href="/profile">
       <button class="btn-hover color-3">{{request.user}}</button></a>
-
-          <!-- <script type="text/javascript"> 
-            var a = "{{request.user}}";
-            console.log(a);
-         </script> -->
+    
 
           {% else %}
 
           <div class="text-end">
 
             <button type="button" class="btn btn-info"><a href="/login">login</a></button>
-            <button type="button" class="btn btn-warning"> <a href="/nusignup">Sign-up</a> </button>
+            {% comment %} <button type="button" class="btn btn-warning"> <a href="/nusignup">Sign-up</a> </button> {% endcomment %}
+            {% load socialaccount %}
+{% providers_media_js %}
+
+
+<a href="{% provider_login_url "google" %}"> <button type="button" class="btn btn-primary"> Login google </button> </a>
+
           </div>
           {% endif %}
         </div>
       </div>
     </header>
-  <!-- <div class="bg">
+   {% comment %} <div class="bg">
       <button class="btn-hover color-1">BUTTON</button>
       <button class="btn-hover color-2">BUTTON</button>
       <button class="btn-hover color-3">BUTTON</button>
@@ -278,7 +281,7 @@
       <button class="btn-hover color-9">BUTTON</button>
       <button class="btn-hover color-10">BUTTON</button>
       <button class="btn-hover color-11">BUTTON</button>
-  </div> -->
+  </div> {% endcomment %}
   
 
 
