--- a/templates/home/Donors.html
+++ b/templates/home/Donors.html
@@ -17,7 +17,9 @@
           margin: auto;
           overflow-y: scroll;
           position: relative;
-          top: 5vh;
+          top: 20vh;
+          display: none;
+
           
            background-color: white;
            background-image: linear-gradient(rgb(224, 222, 228),rgb(232, 238, 174));
@@ -31,6 +33,26 @@
       z-index: -99999;
       opacity: 0.6;
     }
+    #bt{
+         /* display: inline-block; */
+         /* position: absolute; */
+         float: right;
+         margin: 5px;
+     }
+     #bgrp{
+          width: 80%;
+          display: inline-block;
+          /* height: 400px; */
+     }
+     #Donor_search{
+     /* border: solid red 20px; */
+     width: 50vw;
+     margin: auto;
+     position: relative;
+     top: 10vh;
+}
+   
+
 
 </style>
 
@@ -56,19 +78,18 @@
                <option value="7">Ab -</option>
                <option value="8">O -</option>
           </select>
-          <button type="submit" class="btn btn-warning">Search</button>
+      <button type="submit" id="bt" class="btn-hover color-11">Search</button>
+
      </form>
 
 </div>
-<div class="op" id="datas">
-<div id="showdata" class="showdata">
-   
-  
+<div class="op showdata" id="datas">
+     
+</div>
   
      
 
 
-</div>
 
 
 
