--- a/templates/base.html
+++ b/templates/base.html
@@ -249,7 +249,7 @@
           {% if request.user.is_authenticated %}
           
           <a href="/profile">
-      <button class="btn-hover color-3">{{request.user}}</button></a>
+      <button class="btn-hover color-3">{{user}}</button></a>
     
 
           {% else %}
