--- a/templates/home/nusignup.html
+++ b/templates/home/nusignup.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% comment %} {% extends 'base.html' %}
 
 {% block title %}Sign up{% endblock title %}
 {% block css %}
@@ -78,4 +78,4 @@
 
 
 
-  
+   {% endcomment %}
