--- a/templates/blog/blogPost.html
+++ b/templates/blog/blogPost.html
@@ -61,8 +61,9 @@ img{
 {% block body %}
 <div class="container">
   <div class="card my-2 animatn">
- 
+ {% if post.blog_img != "exampleImage" %}
   <img class="blog_image" src="media/{{post.blog_img}}" alt="image">
+ {% endif %}
     <div class="card-header">
       {{post.title}}
     </div>
