--- a/templates/home/Donors.html
+++ b/templates/home/Donors.html
@@ -60,6 +60,10 @@
 {% endblock css %}
 
 {% block body %}
+ <div class="alert">
+      <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span> 
+      <strong>Danger!</strong> Indicates a dangerous or potentially negative action.
+    </div>
 {% load static %}
   <img src="{% static "imgs/donor.jpg" %}" alt="home" />
 <div class="conta my-4">
