--- a/templates/home/contact_us.html
+++ b/templates/home/contact_us.html
@@ -7,8 +7,9 @@
  
 
   .contact {
-    padding: 4%;
+    padding: 0% 4%;
     height: 400px;
+    
   }
 
   .col-md-3 {
@@ -70,6 +71,10 @@
   .button2:hover {
     background-color: #0d0038
   }
+  .t{
+    position: relative;
+    top: 10vh;
+  }
 
   .button2:active {
     background-color: #0d0038;
@@ -80,6 +85,7 @@
     
     position: relative;
     right: -200px;
+    top:4vh;
     visibility: hidden;
     animation: right1 0.3s ease-out 1 0.3s forwards;
   }
@@ -109,9 +115,9 @@
 
 {% block body %}
 
-
+<div class="t">
 <div class="container contact right1">
-  <div class="row">
+  <div class="row my-4">
     <div class="col-md-3">
       <div class="contact-info">
         <img src="https://image.ibb.co/kUASdV/contact-image.png" alt="image" />
@@ -157,6 +163,6 @@
       </form>
     </div>
   </div>
-</div>
+</div></div>
 
 {% endblock body %}
