--- a/templates/base.html
+++ b/templates/base.html
@@ -307,8 +307,8 @@
         </div>
       </div>
     </header>
-    {% comment %} <div class="bg">
-      <button class="btn-hover color-1">BUTTON</button>
+     <div class="bg">
+      <!-- <button class="btn-hover color-1">BUTTON</button>
       <button class="btn-hover color-2">BUTTON</button>
       <button class="btn-hover color-3">BUTTON</button>
       <button class="btn-hover color-4">BUTTON</button>
@@ -319,8 +319,8 @@
       <button class="btn-hover color-9">BUTTON</button>
       <button class="btn-hover color-10">BUTTON</button>
       <button class="btn-hover color-11">BUTTON</button>
-      <button class="btn-hover alr color-12">BUTTON</button>
-    </div>  {% endcomment %}
+      <button class="btn-hover alr color-12">BUTTON</button> -->
+    </div>  
   
 
 
